k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service

spec:
  type: NodePort

  selector:
    app: weather-app

  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30007
